--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -1,5 +1,5 @@
 name: Full-year calendar
-uses: lowlighter/metrics@main
+uses: lowlighter/metrics@latest
 with:
   filename: metrics.plugin.isocalendar.fullyear.svg
   token: ${{ secrets.METRICS_TOKEN }}
