--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           filename: metrics.plugin.isocalendar.fullyear.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
+          base: "/"
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
