--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,11 +12,10 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Full-year calendar
-        uses: lowlighter/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.isocalendar.fullyear.svg
+          filename: metrics-fullyear.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          base: "/"
+          base: ""
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
